<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>Ivanov_Corp</groupId>
    <artifactId>BankApp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>
    <!-- Указываем упаковку в WAR -->
    <dependencies>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.9</version>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>9.4.1208</version>
        </dependency>

        <!-- Подключаем библиотеку Servlet API -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <!-- Плагин упаковки в WAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <webResources>
                        <resource>

                            <!-- Путь к ресурсам приложения (картинки, CSS, JavaScript...) -->
                            <directory>src/main/resources</directory>

                        </resource>
                    </webResources>

                </configuration>
            </plugin>

            <!-- Плагин для запуска сервера Tomcat (он же контейнер сервлетов) через Maven
                 Для запуска перейдите в корень проекта (там где pom.xml) и введите в консоли:

                 mvn tomcat7:run
            -->
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <!-- Контекст приложения. В данном случае приложение будет доступно по адресу

                    http://localhost:8080/

                    -->
                    <path>/</path>
                    <systemProperties>

                        <!-- Настройки используемой памяти и дебага -->
                        <JAVA_OPTS>-Xmx1024m -Xms256m -XX:MaxPermSize=256m -Xnoagent
                            -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000
                        </JAVA_OPTS>

                    </systemProperties>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>